--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>ultralfapp</title>
 </head>
 <body>
-    <p>you can create an issue here while having any question about the spled apps, or contact us via E-mail: [<i>ultralfapp@gmail.com</i>].</p>
+    <p>you can create an issue here while having any question about the apps, or contact us via E-mail: [<i>ultralfapp@gmail.com</i>].</p>
 </body>
 </html>
