--- a/autorgb/privacy.html
+++ b/autorgb/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <!--meta-->
     <meta charset="UTF-8">
-    <title>Auto Control Privacy Policy</title>
+    <title>AUTO RGB Privacy Policy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -232,10 +232,10 @@
             <h1>Privacy Policy</h1>
         </div>
         <div class="content-box">
-            <p class="ti2"><b>RgbHaloKits built the Auto Control app as a Free app. This SERVICE is provided by Auto Control at no cost and is intended for use as is.</b></p><br />
+            <p class="ti2"><b>RgbHaloKits built the AUTO RGB app as a Free app. This SERVICE is provided by AUTO RGB at no cost and is intended for use as is.</b></p><br />
             <p class="ti2">This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p><br />
             <p class="ti2">If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p><br />
-            <p class="ti2">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Auto Control unless otherwise defined in this Privacy Policy.</p><br />
+            <p class="ti2">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at AUTO RGB unless otherwise defined in this Privacy Policy.</p><br />
             <p class="ti2"><b>Information Collection and Use</b></p><br />
             <p class="ti2">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.</p><br />
             <p class="ti2">The app does use third party services that may collect information used to identify you.</p><br />
