--- a/index.html
+++ b/index.html
@@ -3,85 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ultralf App Documentation</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #0f172a;
-            color: #f8fafc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            text-align: center;
-            max-width: 600px;
-            width: 100%;
-            padding: 2rem;
-        }
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 2rem;
-            background: linear-gradient(to right, #38bdf8, #818cf8);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .link-card {
-            display: block;
-            background-color: #1e293b;
-            padding: 1.5rem;
-            border-radius: 12px;
-            text-decoration: none;
-            color: white;
-            transition: transform 0.2s, box-shadow 0.2s;
-            border: 1px solid #334155;
-            margin-bottom: 1rem;
-        }
-        .link-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-            border-color: #38bdf8;
-        }
-        .link-title {
-            font-size: 1.25rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-            display: block;
-        }
-        .link-desc {
-            color: #94a3b8;
-            font-size: 0.9rem;
-        }
-        .contact {
-            margin-top: 3rem;
-            color: #64748b;
-            font-size: 0.9rem;
-        }
-        .contact a {
-            color: #94a3b8;
-        }
-    </style>
+    <title>ultralfapp</title>
 </head>
 <body>
-
-<div class="container">
-    <h1>Ultralf Documents</h1>
-    
-    <a href="./autorgb/" class="link-card">
-        <span class="link-title">Auto RGB Manual</span>
-        <span class="link-desc">Operating instructions, device setup, and troubleshooting for Auto RGB controllers.</span>
-    </a>
-
-    <div class="contact">
-        <p>Questions? Contact us at <br> ultralfapp@gmail.com</p>
-    </div>
-</div>
-
+    <p>you can create an issue here while having any question about the spled apps, or contact us via E-mail: [<i>ultralfapp@gmail.com</i>].</p>
 </body>
 </html>
