--- a/pdf-viewer/index.html
+++ b/pdf-viewer/index.html
@@ -12,12 +12,47 @@
             box-sizing: border-box;
         }
 
+        :root {
+            --bg-color: #f5f5f5;
+            --toolbar-bg: #ffffff;
+            --toolbar-border: #e0e0e0;
+            --toolbar-shadow: rgba(0, 0, 0, 0.05);
+            --button-bg: #f5f5f5;
+            --button-hover: #e8e8e8;
+            --button-icon: #333333;
+            --text-main: #333333;
+            --text-secondary: #666666;
+            --page-bg: #ffffff;
+            --page-shadow: rgba(0, 0, 0, 0.1);
+            --divider-color: #e0e0e0;
+            --loading-spinner: #333333;
+            --error-color: #d32f2f;
+        }
+
+        body.dark-theme {
+            --bg-color: #1a1a1a;
+            --toolbar-bg: #2d2d2d;
+            --toolbar-border: #404040;
+            --toolbar-shadow: rgba(0, 0, 0, 0.2);
+            --button-bg: #3d3d3d;
+            --button-hover: #4d4d4d;
+            --button-icon: #eeeeee;
+            --text-main: #eeeeee;
+            --text-secondary: #aaaaaa;
+            --page-bg: #2d2d2d;
+            --page-shadow: rgba(0, 0, 0, 0.3);
+            --divider-color: #404040;
+            --loading-spinner: #eeeeee;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-            background-color: #f5f5f5;
+            background-color: var(--bg-color);
+            color: var(--text-main);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            transition: background-color 0.3s;
         }
 
         /* 顶部工具栏 */
@@ -27,14 +62,14 @@
             left: 0;
             right: 0;
             height: 56px;
-            background: #ffffff;
-            border-bottom: 1px solid #e0e0e0;
+            background: var(--toolbar-bg);
+            border-bottom: 1px solid var(--toolbar-border);
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 16px;
             z-index: 100;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 2px 4px var(--toolbar-shadow);
         }
 
         .toolbar-group {
@@ -47,7 +82,7 @@
             width: 40px;
             height: 40px;
             border: none;
-            background: #f5f5f5;
+            background: var(--button-bg);
             border-radius: 8px;
             cursor: pointer;
             display: flex;
@@ -57,27 +92,18 @@
         }
 
         .toolbar button:hover {
-            background: #e8e8e8;
-        }
-
-        .toolbar button:active {
-            transform: scale(0.95);
-        }
-
-        .toolbar button:disabled {
-            opacity: 0.4;
-            cursor: not-allowed;
+            background: var(--button-hover);
         }
 
         .toolbar button svg {
             width: 20px;
             height: 20px;
-            fill: #333;
+            fill: var(--button-icon);
         }
 
         .page-info {
             font-size: 14px;
-            color: #666;
+            color: var(--text-secondary);
             min-width: 100px;
             text-align: center;
             user-select: none;
@@ -85,7 +111,7 @@
 
         .zoom-info {
             font-size: 14px;
-            color: #666;
+            color: var(--text-secondary);
             min-width: 60px;
             text-align: center;
             user-select: none;
@@ -94,7 +120,7 @@
         .divider {
             width: 1px;
             height: 24px;
-            background: #e0e0e0;
+            background: var(--divider-color);
             margin: 0 8px;
         }
 
@@ -111,8 +137,8 @@
         }
 
         .page-wrapper {
-            background: #ffffff;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            background: var(--page-bg);
+            box-shadow: 0 2px 8px var(--page-shadow);
             border-radius: 4px;
         }
 
@@ -128,14 +154,14 @@
             align-items: center;
             justify-content: center;
             height: calc(100vh - 56px);
-            color: #666;
+            color: var(--text-secondary);
         }
 
         .spinner {
             width: 40px;
             height: 40px;
-            border: 3px solid #e0e0e0;
-            border-top-color: #333;
+            border: 3px solid var(--divider-color);
+            border-top-color: var(--loading-spinner);
             border-radius: 50%;
             animation: spin 1s linear infinite;
             margin-bottom: 16px;
@@ -152,24 +178,13 @@
             align-items: center;
             justify-content: center;
             height: calc(100vh - 56px);
-            color: #d32f2f;
+            color: var(--error-color);
             text-align: center;
             padding: 24px;
         }
 
-        .error-icon {
-            width: 64px;
-            height: 64px;
-            margin-bottom: 16px;
-        }
-
-        .error h2 {
-            margin-bottom: 8px;
-            font-weight: 500;
-        }
-
         .error p {
-            color: #666;
+            color: var(--text-secondary);
             max-width: 400px;
         }
 
@@ -425,7 +440,17 @@
         async function init() {
             const params = new URLSearchParams(window.location.search);
             const toolbarParam = params.get('toolbar');
+            const themeParam = params.get('theme') || 'auto';
             
+            // 主题处理
+            if (themeParam === 'dark') {
+                document.body.classList.add('dark-theme');
+            } else if (themeParam === 'auto') {
+                if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                    document.body.classList.add('dark-theme');
+                }
+            }
+
             // 如果 toolbar=0 或 toolbar=false，隐藏工具栏
             if (toolbarParam === '0' || toolbarParam === 'false') {
                 document.body.classList.add('hide-toolbar');
